[package]
name = "wiki-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
dotenv = "0.15"
rayon = "1"
memmap = "0.7"
bzip2-rs = "0.1"
minidom = "0.15"
thiserror = "1.0"
chrono = "0.4"
parse_wiki_text = "0.1"
wry = "0.20"
url = "2"
urlencoding = "2"
kata = { path = "lib/kata" }